# cim-domain

./: .gitignore  .mcp.json  AGENTS.md  AGENT_AGGREGATE_SUMMARY.md  AGGREGATES_AS_ENRICHED_CATEGORIES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOMAIN_MODEL_ANALYSIS.md  DOMAIN_RESTRUCTURING_SUMMARY.md  FINAL_STATUS.md  Makefile  ORGANIZATION_IMPLEMENTATION_SUMMARY.md  PERSISTENCE_STATUS.md  POLICY_AGGREGATE_SUMMARY.md  PROJECT_STATUS.md  README.md  SCHEMA_EXPORT_SUMMARY.md  claude.md  dialog-dag.json  domain-graph.json  domain-modules.dot  flake.nix  isomorphic-architecture.md  location-restructuring.md  tarpaulin.toml  test-coverage-report.md  test-results-dashboard.html  test_uuid_v7_simple.rs  testing-expansion-summary.md  ul-projection.diff.json  ul-projection.json
.cargo/: config.toml
.claude/: commands.md  instructions.md
.claude/instructions/: ddd-ecs-morphism.md  domain-formal-structure.md  ecs-event-pattern.md  entity-monad.md  fp-ct-rust.md  pragmatic-fp-domain.md
.claude/rules/: copyright-validation.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  test-dashboard.yml
benches/: persistence_benchmarks.rs
crates/cim-component/: Cargo.toml  readme.md
crates/cim-component/examples/: advanced_patterns.rs  architecture_usage.rs  basic_usage.rs
crates/cim-component/src/: lib.rs  tests.rs
crates/cim-component/tests/: component_tests.rs
crates/cim-component/tests/infrastructure/: mod.rs  test_event_stream.rs  test_nats_connection.rs
crates/cim-subject/: Cargo.toml
dashboard/: index.html  test-server.py
doc/: README.md  persistence-summary.md
doc/act/: act_rules_codex.md  diagram_catalog.md  diagram_plan.md  diagram_style.md  string_diagrams.md
doc/architecture/: aggregates.md  components.md  correlation-causation-design.md  design-patterns.md  domain_authoring.md  integration.md  overview.md  persistence.md  sagas.md  state-machine-design.md
doc/design/: component-architecture.md  component-list.md  components-generated.md  components.json  domain-design-principles.md
doc/development/: implementation-status.md  persistence-patterns.md  testing.md
doc/plan/: core-entities-implementation.md
doc/progress/: progress.json
doc/qa/: testing_model.md
doc/quality/: cim-domain-qa-report.md  user-stories.md
doc/status/: BUILD_FIXES.md  FINAL_STATUS.md  PERSISTENCE_STATUS.md  PROJECT_STATUS.md  REWRITTEN_EXAMPLES.md
doc/storage/: persistence_model.md
doc/testing/: test-infrastructure.md  test_report.md
doc/ul/: domain_objects_catalog.md  domain_objects_todos.md  graph_to_code_mapping.md  morphism_naming_policy.md
docs/: FP_MATHEMATICAL_PROOFS.md  FP_STRING_DIAGRAMS.md  SERIALIZATION_AND_SCHEMAS.md
docs/architecture/: transaction_state_machine.md
domain-graphs/: domain-analysis.md  domain-model.dot  domain-model.mmd
examples/: README.md  advanced_persistence_example.rs  basic_schema_export.rs  bevy_integration.rs  command_handler_example.rs  common_types.rs  comprehensive_demo.rs  comprehensive_demo_simple.rs  event_replay_example.rs  event_stream_example.rs  fp_domain_extension.rs  full_persistence_example.rs  generate_component_docs.rs  inspect_cid.rs  integration_example.rs  persistence_example.rs  persistence_example_v2.rs  persistence_metrics_demo.rs  query_handler_example.rs  schema_export.rs  simple_example.rs  simple_persistence_example.rs  simplified_schema_export.rs  state_machine_aggregates.rs  test_uuid_v7.rs  user_story_1_component_developer.rs  user_story_2_system_architect.rs  user_story_3_event_stream_manager.rs  user_story_4_data_analyst.rs  user_story_5_integration_engineer.rs  workflow_basics.rs  workflow_execution.rs
examples/demos/: README.md  advanced_event_sourcing_demo.rs  cqrs_pattern_demo.rs  full_event_sourcing_demo.rs  readme.md  state_machine_demo.rs
examples/domain_examples/: Cargo.toml
schemas/: CommandAcknowledgment.json  CommandStatus.json  DomainEventEnvelope.json  EventEnvelope.json  EventMetadata.json  Pagination.json  PropagationScope.json  QueryCriteria.json  QueryResponse.json  QueryResult.json  QueryStatus.json  README.md  SagaEvent.json  SortDirection.json  WorkflowCancelled.json  WorkflowCompleted.json  WorkflowEvent.json  WorkflowFailed.json  WorkflowResumed.json  WorkflowStarted.json  WorkflowSuspended.json  WorkflowTransitionExecuted.json  WorkflowTransitioned.json  all-schemas.json  index.json  sample_event.json
scripts/: capture-test-results.sh  chat_event.sh  chat_insight.sh  copyright_validator.sh  coverage.sh  update_test_report.sh
src/: bevy_bridge.rs  cid.rs  command_handlers.rs  commands.rs  component.rs  component_sync.rs  composition_types.rs  concept_graph.rs  concept_naming.rs  concepts.rs  context_types.rs  core_concepts.rs  cqrs.rs  domain_component_bridge.rs  domain_events.rs  domain_path.rs  entity.rs  errors.rs  event_handler.rs  events.rs  formal_domain.rs  fp_adts.rs  fp_monad.rs  fp_schemas.rs  identifiers.rs  lib.rs  location.rs  node_types.rs  object_store.rs  ontology_quality.rs  person.rs  query_handlers.rs  relationship_types.rs  saga.rs  state_machine.rs  subject.rs  subject_abstraction.rs  transaction_state.rs  ul_classifier.rs  vector_clock.rs
test-results/: raw-output.json  report.md  summary.json  test-output.txt
tests/: act_category_graph_tests.rs  act_diagram_commutation_tests.rs  act_feature_mapping_strict.rs  bdd_support.rs  category_theory_tests.rs.disabled  cid_content_addressing_tests.rs  component_isomorphism_test.rs.disabled  domain_invariant_tests.rs  domain_path_algebra_tests.rs  envelope_identity_tests.rs  infrastructure_tests.rs  insights_policy_tests.rs  jetstream_event_store_tests.rs  nats_integration_tests.rs  persistence_tests.rs  query_read_path_tests.rs  subject_algebra_tests.rs  ul_code_exports_alignment_tests.rs  ul_naming_policy_tests.rs  value_collection_monoid_tests.rs
tools/: Cargo.toml  schema_export.rs
tools/dialog_dag/: Cargo.toml  README.md
tools/domain_graph/: Cargo.toml
tools/src/: main.rs
(+100 files in other folders)
