# Copyright 2025 Cowboy AI, LLC.

[workspace]
members = [
    "."
]
resolver = "2"

[package]
name = "cim-domain"
version = "0.5.0"
edition = "2021"
authors = ["The Cowboy AI"]
description = "Core DDD components and traits for CIM - Domain-Driven Design building blocks"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thecowboyai/alchemist"
keywords = ["ddd", "domain", "component", "entity", "aggregate"]
categories = ["data-structures", "rust-patterns"]

# generate-domain-graph binary has been moved to cim-domain-graph

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Domain dependencies
cim-ipld = { git = "https://github.com/thecowboyai/cim-ipld", version = "0.5" }
cim-subject = { git = "https://github.com/TheCowboyAI/cim-subject", rev = "4632d7eb68f43adf319b3488e6c4191c54da7868" }
cim-component = { git = "https://github.com/TheCowboyAI/cim-component", version = "0.3" }

# Content addressing
cid = { version = "0.11", features = ["serde"] }

# Serialization
indexmap = "2.7"
lru = "0.12"

# Async runtime
async-nats = { version = "0.41", features = ["service"] }

# For JetStream snapshot store
bytes = "1.5"

[dev-dependencies]
# Testing
tokio-test = "0.4"
proptest = "1.6"
test-case = "3.3"
pretty_assertions = "1.4"

# Mocking
mockall = "0.13"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "jetstream_event_store_tests"
path = "tests/jetstream_event_store_tests.rs"

# Disabled - needs updating for new API
# [[test]]
# name = "category_theory_tests"
# path = "tests/category_theory_tests.rs"

# [[example]]
# name = "command_handler_example"
# path = "examples/command_handler_example.rs"

[[example]]
name = "query_handler_example"
path = "examples/query_handler_example.rs"

[[example]]
name = "state_machine_aggregates"
path = "examples/state_machine_aggregates.rs"

[[example]]
name = "persistence_example"
path = "examples/persistence_example.rs"

[[example]]
name = "persistence_example_v2"
path = "examples/persistence_example_v2.rs"

[[example]]
name = "full_persistence_example"
path = "examples/full_persistence_example.rs"

[[example]]
name = "advanced_persistence_example"
path = "examples/advanced_persistence_example.rs"

[[example]]
name = "integration_example"
path = "examples/integration_example.rs"

[[example]]
name = "event_replay_example"
path = "examples/event_replay_example.rs"

[[example]]
name = "inspect_cid"
path = "examples/inspect_cid.rs"

[[example]]
name = "full_event_sourcing_demo"
path = "examples/demos/full_event_sourcing_demo.rs"

[[example]]
name = "state_machine_demo"
path = "examples/demos/state_machine_demo.rs"

[[example]]
name = "cqrs_pattern_demo"
path = "examples/demos/cqrs_pattern_demo.rs"

[[example]]
name = "event_stream_example"
path = "examples/event_stream_example.rs"

[[example]]
name = "bevy_integration"
path = "examples/bevy_integration.rs"

[[example]]
name = "workflow_basics"
path = "examples/workflow_basics.rs"

[[example]]
name = "simple_example"
path = "examples/simple_example.rs"

[[example]]
name = "simple_persistence_example"
path = "examples/simple_persistence_example.rs"

[[example]]
name = "command_handler_example"
path = "examples/command_handler_example.rs"

[[example]]
name = "persistence_metrics_demo"
path = "examples/persistence_metrics_demo.rs"

[[bench]]
name = "persistence_benchmarks"
harness = false

[features]
default = []
test-utils = []