# Copyright (c) 2025 - Cowboy AI, LLC.

[workspace]
members = [
    ".",
    "examples/domain_examples",
]
exclude = [
    "tools/dialog_dag",
    "tools/domain_graph",
]
resolver = "2"

[package]
name = "cim-domain"
version = "0.8.1"
edition = "2021"
authors = ["The Cowboy AI"]
description = "Core DDD components and traits for CIM - Domain-Driven Design building blocks"
license = "MIT"
repository = "https://github.com/thecowboyai/cim-domain"
keywords = ["ddd", "domain", "component", "entity", "aggregate"]
categories = ["data-structures", "rust-patterns"]

# generate-domain-graph binary has been moved to cim-domain-graph

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Domain dependencies
# cim-domain is the foundation library - other CIM modules depend on it
# No dependencies on other CIM modules - they compose with cim-domain

# Content addressing
cid = { version = "0.11", features = ["serde"] }
multihash = "0.19"
blake3 = "1.5"

# Serialization
indexmap = "2.7"
lru = "0.12"

# Async runtime
# Integration dependencies removed for pure-library scope

# JSON Schema generation  
schemars = { version = "0.8", features = ["chrono", "uuid1"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
rand = "0.8"
proptest = "1.6"
test-case = "3.3"
pretty_assertions = "1.4"
serde_yaml = "0.9"

# Mocking
mockall = "0.13"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

## Removed JetStream/NATS-dependent tests for pure-library scope

# Disabled - needs updating for new API
# [[test]]
# name = "category_theory_tests"
# path = "tests/category_theory_tests.rs"

# [[example]]
# name = "command_handler_example"
# path = "examples/command_handler_example.rs"

 













 

 

 


 


 

 


 

 


 

## Removed persistence benchmarks for pure-library scope

[features]
default = []
# Minimal feature set
full = []
test-utils = []
act_strict = []
domain_bdd = []
