[package]
name = "domain_graph_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
cim-domain = { path = "../.." }

## Removed legacy generator that injected sample ValueObjects and conflicts
## with the root domain-graph.json. Use the root graph as the source of truth.

[[bin]]
name = "ul_projection"
path = "src/bin/ul_projection.rs"

[[bin]]
name = "validate_domain_graph"
path = "src/bin/validate_domain_graph.rs"

[[bin]]
name = "add_morphism"
path = "src/bin/add_morphism.rs"

[[bin]]
name = "ul_narrative"
path = "src/bin/ul_narrative.rs"
